--- a/css/dataTables.bootstrap5.scss
+++ b/css/dataTables.bootstrap5.scss
@@ -1,5 +1,6 @@
 
 $table-row-selected: 13 110 253;
+$table-header-order-height: 24px;
 
 @import './common.scss';
 @import './ordering.scss';
