--- a/css/dataTables.bulma.scss
+++ b/css/dataTables.bulma.scss
@@ -2,6 +2,7 @@
 /*! DataTables Bulma integration
  * © SpryMedia Ltd - datatables.net/license
  */
+$table-header-order-height: 24px;
 
 @import './common.scss';
 @import './ordering.scss';
